--- a/tickets.html
+++ b/tickets.html
@@ -74,7 +74,7 @@
 					<legend>Payment Method</legend>
 					<input type="radio" name="me" id="Bill1" value="Bill">
 					<label for="Bill1"> Bill me</label>
-					input type="radio" name="Card" id="Credit1" value="Credit">
+					<input type="radio" name="Card" id="Credit1" value="Credit">
 					<label for="Credit 1">Credit Card</label>
 				</fieldset>
 				<fieldset id="buttons">
