--- a/tickets.html
+++ b/tickets.html
@@ -68,7 +68,7 @@
 					<label for="starting_date">Starting Date:</label>
 					<input type="date" name="starting_date" id="starting_date" required><br>
 					<label for="tickets">Number of Tickets:</label>
-					<input type="number" name="tickets" id="tickets" value="2" min="1" max="4" placeholder="from 1 to 4"><br>
+					<input type="number" name="tickets" id="tickets" value="2" min="1" max="4" placeholder="Number of Single Tickets"><br>
 				</fieldset>
 				<fieldset>
 					<legend>Payment Method</legend>
