--- a/tickets.html
+++ b/tickets.html
@@ -70,7 +70,7 @@
 					<label for="tickets">Number of Tickets:</label>
 					<input type="number" name="tickets" id="tickets" value="2" min="1" max="4" placeholder="Number of Single Tickets"><br>
 				</fieldset>
-				<fieldset>
+				<fieldset id= "Payment">
 					<legend>Payment Method</legend>
 					<input type="radio" name="me" id="Bill1" value="Bill">
 					<label for="Bill1"> Bill me</label>
