--- a/tickets.html
+++ b/tickets.html
@@ -76,8 +76,43 @@
 					<input type="radio" name="Card" id="Credit1" value="Credit">
 					<label for="Credit 1">Credit Card</label>
 				</fieldset>
+			         <fieldset>
+					 <legend>Credit Card Information</legend>
+					 <label for="card_type">Card Type:</label>
+					 <select name="card_type" id="card_type">
+					<option value="j">Visa</option>
+					<option value="r">Mastercard</option>
+					<option value="c">Discover</option>
+					 </select>
+					<br>
+					<label for="card_number">Card Number:</label>
+					<input type="Number" name="Card" id="Card" max="16" placholder="16 digits" required>
+					<br>
+					<label for="expiration_date">Expiration Date:</label>
+					<select name="months" id="months">
+					<option value="a">January</option>
+					<option value="b">February</option>
+					<option value="c">March</option>
+					<option value="d">Apirl</option>
+					<option value="e">May</option>
+					<option value="f">June</option>
+					<option value="g">July</option>
+					<option value="h">August</option>
+					<option value="i">September</option>
+					<option value="j">October</option>
+					<option value="k">November</option>
+					<option value="l">December</option>
+					</select>
+					<select name="year" id="year">
+					<option value="a"> 2017</option>
+					<option value="b"> 2018</option>
+					<option value="c"> 2019</option>
+					<option value="d"> 2020</option>
+					<option value="f"> 2021</option>
+					</select>
+				</fieldset>
 				<fieldset id="buttons">
-					<legend>Submit Your Membership</legend>
+					<legend>Submit Your Order</legend>
 					<label>&nbsp;</label>
 					<input type="submit" id="submit" value="Submit">
 					<input type="reset" id="reset" value="Reset Fields"><br>
