--- a/tickets.html
+++ b/tickets.html
@@ -86,6 +86,13 @@
 					 </select>
 					<br>
 					<label for="card_number">Card Number:</label>
+					 <input
+						type="text"
+						id="card_number"
+						name="card_number"
+						placeholder="16 digits"
+						pattern="/d{16}"
+					>
 					<input type="Number" name="Card" id="Card" max="16" placholder="16 digits" required>
 					<br>
 					<label for="expiration_date">Expiration Date:</label>
