--- a/tickets.html
+++ b/tickets.html
@@ -86,7 +86,7 @@
 					 </select>
 					<br>
 					<label for="card_number">Card Number:</label>
-					<input type="Number" name="Card" id="Card" pattern="/d{16}" max="16" placholder="16 digits" required>
+					<input type="Number" name="Card" id="Card" pattern="/d{16}" max="16" placeholder="16 digits" required>
 					<br>
 					<label for="expiration_date">Expiration Date:</label>
 					<select name="months" id="months">
@@ -103,6 +103,7 @@
 					<option value="k">November</option>
 					<option value="l">December</option>
 					</select>
+					 <br>
 					<select name="year" id="year">
 					<option value="a"> 2017</option>
 					<option value="b"> 2018</option>
